revised results of 4b in the text

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -397,9 +397,9 @@ For the \emph{d} prime, results from the Bayesian model revealed a robust effect
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral character on RT and d'}
 \end{figure}
 
-The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral characters (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that RTs to shapes associated with bad characters (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}.
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 579 ms, 95\% HDI = {[}500 661{]}) than shapes associated with neutral characters (median = 624 ms, 95\% HDI = {[}543 711{]}), \(median_{diff}\) = -44, 95\% HDI {[}-60 -30{]}. We also found that RTs to shapes associated with bad characters (median = 641 ms, 95\% HDI = {[}561 730{]}) were slower as compared to the neutral character, \(median_{diff}\) = 17, 95\% HDI {[}3 30{]}.
 
-For the nonmatch trials, we found the advantage of good character: Shapes associated with good characters (median = 654.16 ms, 95\% HDI = {[}573.12 742.91{]}) were faster than shapes associated with neutral characters (median = 671.81 ms, 95\% HDI = {[}588.33 762.65{]}), \(median_{diff}\) = -17.72 ms, 95\% HDI {[}-24.58 -11.19{]}. Similarly, the shapes associated with bad characters (median = 676.93 ms, 95\% HDI = {[}590.23 765.67{]}) were slower than shapes associated with neutral characters, \(median_{diff}\) = 5.20 ms, 95\% HDI {[}-0.04 10.66{]}, but the effect size was smaller than the match trials.
+For the nonmatch trials, we found the advantage of good character: Shapes associated with good characters (median = 654 ms, 95\% HDI = {[}573 743{]}) were faster than shapes associated with neutral characters (median = 672 ms, 95\% HDI = {[}588 763{]}), \(median_{diff}\) = -18 ms, 95\% HDI {[}-25 -11{]}. Similarly, the shapes associated with bad characters (median = 677 ms, 95\% HDI = {[}590 766{]}) were slower than shapes associated with neutral characters, \(median_{diff}\) = 5 ms, 95\% HDI {[}0 11{]}, but the effect size was smaller than the match trials.
 
 \hypertarget{modulation-effect-self-referential-processing}{%
 \subsection{Modulation effect self-referential processing}\label{modulation-effect-self-referential-processing}}
@@ -429,17 +429,17 @@ More importantly, we found evidence, albeit weak, that task-irrelevant moral cha
 
 A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}629 667{]}) were inside. This effect was reversed for the ``other'' condition: RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) or bad character (median = 719, 95\% HDI {[}696 740{]}) inside.
 
+In experiment 4b, where moral characters were task-relevant and ``self'' vs ``other'' were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both \emph{d'} and reaction times. This pattern, again, shows a robust prioritization effect of good character.
+
+Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.07 0.32{]}), but this effect did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-0.13, 0.21{]}) or ``bad'' person (\(mean_{diff}\) = -0.05, 95\% HDI{[}-0.20, 0.13{]}).
+
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-exp4-all-1.pdf}
 \caption{\label{fig:plot-exp4-all}Experiment 4: Implicit binding between good character and the self.}
 \end{figure}
 
-In experiment 4b, where moral characters were task-relevant and ``self'' vs ``other'' were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both \emph{d'} and reaction times. This pattern, again, shows a robust prioritization effect of good character.
-
-Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07), but this effect did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% HDI{[}-.18, .09{]}).
-
-The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55 ms, 95\% HDI {[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% HDI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person, See Figure \ref{fig:plot-exp4-all}.
+The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55, 95\% HDI {[}-75, -35{]}), and this effect was larger than when the shapes were associated neutral (\(mean_{diff}\) = 11, 95\% HDI {[}1, 21{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person, See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
