--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -614,7 +614,6 @@ p_rt1 <- df_m1_plot_rt %>%
         scale_fill_brewer(palette = "Dark2") +
         theme_apa()
 
-
 df_m1_plot_rt_diff <- df_m1_plot_rt %>%
         tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
         dplyr::mutate(diff_GB_NM = Good_NM - Bad_NM,               # calculate the differences between conditions
@@ -662,46 +661,46 @@ df_rt1_diff_hdi <- df_m1_plot_rt_diff %>%
 
 ### get results that will be reported in the text
 ## match trials
-med_rt_m_m1_good <- df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']
-ll_rt_m_m1_good <- df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']
-ul_rt_m_m1_good <- df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']
+med_rt_m_m1_good <- round(df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
+ll_rt_m_m1_good <- round(df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
+ul_rt_m_m1_good <- round(df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
 
-med_rt_m_m1_neut <- df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']
-ll_rt_m_m1_neut <- df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']
-ul_rt_m_m1_neut <- df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']
+med_rt_m_m1_neut <- round(df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
+ll_rt_m_m1_neut <- round(df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
+ul_rt_m_m1_neut <- round(df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
 
-med_rt_m_m1_bad <- df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']
-ll_rt_m_m1_bad <- df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']
-ul_rt_m_m1_bad <- df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']
+med_rt_m_m1_bad <- round(df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
+ll_rt_m_m1_bad <- round(df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
+ul_rt_m_m1_bad <- round(df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M'], digits = 0)
 
-med_diff_rt_m_m1_GN <- df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_GN_M']
-ll_diff_rt_m_m1_GN <- df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_GN_M']
-ul_diff_rt_m_m1_GN <- df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_GN_M']
+med_diff_rt_m_m1_GN <- round(df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_GN_M'], digits = 0)
+ll_diff_rt_m_m1_GN <- round(df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_GN_M'], digits = 0)
+ul_diff_rt_m_m1_GN <- round(df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_GN_M'], digits = 0)
 
-med_diff_rt_m_m1_BN <- df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_BN_M']
-ll_diff_rt_m_m1_BN <- df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_BN_M']
-ul_diff_rt_m_m1_BN <- df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_BN_M']
+med_diff_rt_m_m1_BN <- round(df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_BN_M'], digits = 0)
+ll_diff_rt_m_m1_BN <- round(df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_BN_M'], digits = 0)
+ul_diff_rt_m_m1_BN <- round(df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_BN_M'], digits = 0)
 
 ## nonmatch trials
-med_rt_nm_m1_good <- df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']
-ll_rt_nm_m1_good <- df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']
-ul_rt_nm_m1_good <- df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']
+med_rt_nm_m1_good <- round(df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
+ll_rt_nm_m1_good <- round(df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
+ul_rt_nm_m1_good <- round(df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
 
-med_rt_nm_m1_neut <- df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']
-ll_rt_nm_m1_neut <- df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']
-ul_rt_nm_m1_neut <- df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']
+med_rt_nm_m1_neut <- round(df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
+ll_rt_nm_m1_neut <- round(df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
+ul_rt_nm_m1_neut <- round(df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
 
-med_rt_nm_m1_bad <- df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']
-ll_rt_nm_m1_bad <- df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']
-ul_rt_nm_m1_bad <- df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']
+med_rt_nm_m1_bad <- round(df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
+ll_rt_nm_m1_bad <- round(df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
+ul_rt_nm_m1_bad <- round(df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM'], digits = 0)
 
-med_diff_rt_nm_m1_GN <- df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_GN_NM']
-ll_diff_rt_nm_m1_GN <- df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_GN_NM']
-ul_diff_rt_nm_m1_GN <- df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_GN_NM']
+med_diff_rt_nm_m1_GN <- round(df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_GN_NM'], digits = 0)
+ll_diff_rt_nm_m1_GN <- round(df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_GN_NM'], digits = 0)
+ul_diff_rt_nm_m1_GN <- round(df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_GN_NM'], digits = 0)
 
-med_diff_rt_nm_m1_BN <- df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_BN_NM']
-ll_diff_rt_nm_m1_BN <- df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_BN_NM']
-ul_diff_rt_nm_m1_BN <- df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_BN_NM']
+med_diff_rt_nm_m1_BN <- round(df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_BN_NM'], digits = 0)
+ll_diff_rt_nm_m1_BN <- round(df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_BN_NM'], digits = 0)
+ul_diff_rt_nm_m1_BN <- round(df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_BN_NM'], digits = 0)
 ```
 
   <!-- plot all graphs form the first part together -->
@@ -839,6 +838,22 @@ sdt_ms_m1 <- df_ms %>%
                   backend = 'cmdstanr',  # with cmdstanr
                   file = here::here("glmmModels/sdt_ms_DummyCode_3_level"))
 
+# sdt_ms_m1_s <- df_ms %>%
+#         dplyr::filter(Identity == "Self") %>%
+#         dplyr::mutate(Subject = as.factor(Subject),
+#                       ExpID_new = as.factor(ExpID_new)) %>%
+#         brms::brm(saymatch ~ 0 + Valence + ismatch:Valence + 
+#                           (0 + Valence + ismatch:Valence | ExpID_new) + 
+#                           (0 + Valence + ismatch:Valence | ExpID_new:Subject),
+#                   family = bernoulli(link="probit"),
+#                   data = .,
+#                   chains = 4,
+#                   iter = 2000,
+#                   thin = 1,
+#                   control = list(adapt_delta = .90),
+#                   cores = parallel::detectCores(),
+#                   backend = 'cmdstanr',  # with cmdstanr
+#                   file = here::here("glmmModels/sdt_ms_DummyCode_3_level_self_only"))
 # summary(sdt_ms_m1)
 
 # # Get the variables in the model
@@ -1915,6 +1930,7 @@ p2 <- (p_exp4a_rt_diff_val + p_exp4a_dprime1_diff_val) + plot_layout(nrow = 1, b
 
 A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = `r rep_m_exp4a_rt_good_s`, 95% HDI [`r rep_ll_exp4a_rt_good_s` `r rep_ul_exp4a_rt_good_s`]) were faster than when a neutral character (median = `r rep_m_exp4a_rt_neut_s`, 95% HDI [`r rep_ll_exp4a_rt_neut_s` `r rep_ul_exp4a_rt_neut_s`]) or bad character (median = `r rep_m_exp4a_rt_bad_s`, 95% HDI [`r rep_ll_exp4a_rt_bad_s` `r rep_ul_exp4a_rt_bad_s`]) were inside. This effect was reversed for the “other” condition: RTs for shapes associated with good character inside (median = `r rep_m_exp4a_rt_good_o`, 95% HDI [`r rep_ll_exp4a_rt_good_o` `r rep_ul_exp4a_rt_good_o`]) were slower than those with neutral character (median =  `r rep_m_exp4a_rt_neut_o`, 95% HDI [`r rep_ll_exp4a_rt_neut_o` `r rep_ul_exp4a_rt_neut_o`]) or bad character (median =  `r rep_m_exp4a_rt_bad_o`, 95% HDI [`r rep_ll_exp4a_rt_bad_o` `r rep_ul_exp4a_rt_bad_o`]) inside.
 
+In experiment 4b, where moral characters were task-relevant and “self” vs “other” were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both *d'* and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 ```{r 4b_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4b'
 exp4b_sdt_m1 <- fun_sdt_val_id(exp_name)
@@ -1959,6 +1975,27 @@ exp4b_sdt_p <- df_exp4b_sdt_m1_plot %>%
   #scale_fill_brewer(palette = "Dark2") +
   theme_classic() 
 
+df_exp4b_sdt_hdi <- df_exp4b_sdt_m1_plot %>%
+        dplyr::ungroup() %>%
+        dplyr::filter(params == 'dprime') %>%
+        dplyr::select(-c('.variable', 'params')) %>%
+        # dplyr::mutate(term_diff = stringr::str_sub(.$term_diff, end = -8)) %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           values_from = '.value',
+                           names_from = c('Valence', 'Identity')) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       BF = 1,
+                                       centrality = "median") %>%
+        dplyr::select(Parameter, Median, CI_low, CI_high) %>%
+        tidyr::pivot_longer(cols = Median:CI_high, names_to = "Index", values_to = "Values") %>%
+        tidyr::unite("Indicies", Parameter:Index) %>%
+        dplyr::mutate(Values = round(Values, digits = 3))
+
 df_exp4b_sdt_m1_plot_diff <- df_exp4b_sdt_m1_plot %>%
         tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
         dplyr::ungroup() %>%
@@ -1983,6 +2020,17 @@ df_exp4b_sdt_m1_plot_diff <- df_exp4b_sdt_m1_plot %>%
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_dprm_S', 'diff_GN_dprm_S', 'diff_BN_dprm_S', 
                                                          'diff_GB_dprm_O', 'diff_GN_dprm_O', 'diff_BN_dprm_O', 
                                                          'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B')))
+
+df_exp4b_sdt_m1_diff_hdi <- df_exp4b_sdt_m1_plot_diff %>%
+        dplyr::group_by(term_diff) %>%
+        median_hdi(value) %>%
+        dplyr::ungroup() %>%
+        dplyr::select(term_diff, value, `.lower`, `.upper`) %>%
+        tidyr::pivot_longer(cols = value:`.upper`, names_to = "Index", values_to = "Values") %>%
+        tidyr::unite("Indicies", term_diff:Index) %>%
+        dplyr::mutate(Values = round(Values, digits = 3),
+                      Indicies = str_remove_all(Indicies, "\\."))
+        
 p_exp4b_dprime1_diff_val <- df_exp4b_sdt_m1_plot_diff %>%
         dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
         dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
@@ -2027,6 +2075,8 @@ p_exp4b_dprime1_diff_id <- df_exp4b_sdt_m1_plot_diff %>%
              y = expression("Contrasts (Self vs. Other)"))+ 
         facet_wrap( ~ conditions, nrow = 1)
 ```
+
+Most importantly, we found evidence that task-irrelevant labels, “self” or “other”, also played a role. For shapes associated with good character, the *d* prime was greater when shapes had a "self" inside than with "other" inside ($mean_{diff}$ = `r df_exp4b_sdt_m1_diff_hdi$Values[19]`, 95% HDI [`r df_exp4b_sdt_m1_diff_hdi$Values[20]` `r df_exp4b_sdt_m1_diff_hdi$Values[21]`]), but this effect did not occur when the target shape where associated with "neutral" ($mean_{diff}$ = `r df_exp4b_sdt_m1_diff_hdi$Values[22]`, 95% HDI [`r df_exp4b_sdt_m1_diff_hdi$Values[23]`, `r df_exp4b_sdt_m1_diff_hdi$Values[24]`]) or "bad" person ($mean_{diff}$ = `r df_exp4b_sdt_m1_diff_hdi$Values[25]`, 95% HDI[`r df_exp4b_sdt_m1_diff_hdi$Values[26]`, `r df_exp4b_sdt_m1_diff_hdi$Values[27]`]). 
 
 ```{r 4b_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4b'
@@ -2096,6 +2146,17 @@ df_exp4b_m1_plot_rt_diff <- df_exp4b_m1_plot_rt %>%
   dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_S_RT_M', 'diff_BN_S_RT_M', 'diff_GB_S_RT_M', 
                                                          'diff_GN_O_RT_M', 'diff_BN_O_RT_M', 'diff_GB_O_RT_M', 
                                                          'diff_SO_G_RT_M', 'diff_SO_N_RT_M', 'diff_SO_B_RT_M')))
+
+df_exp4b_m1_rt_diff_hdi <- df_exp4b_m1_plot_rt_diff %>%
+        dplyr::group_by(term_diff) %>%
+        median_hdi(value) %>%
+        dplyr::ungroup() %>%
+        dplyr::select(term_diff, value, `.lower`, `.upper`) %>%
+        tidyr::pivot_longer(cols = value:`.upper`, names_to = "Index", values_to = "Values") %>%
+        tidyr::unite("Indicies", term_diff:Index) %>%
+        dplyr::mutate(Values = round(Values, digits = 0),
+                      Indicies = str_remove_all(Indicies, "\\."))
+
 df_exp4b_m1_plot_rt_diff %>% 
         dplyr::filter(term_diff == 'diff_SO_G_RT_M') %>%  dplyr::pull(value) %>%
         bayestestR::describe_posterior(., centrality = "mean",
@@ -2189,12 +2250,7 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 
 ```
 
-In experiment 4b, where moral characters were task-relevant and “self” vs “other” were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both *d'* and reaction times. This pattern, again, shows a robust prioritization effect of good character.
-
-Most importantly, we found evidence that task-irrelevant labels, “self” or “other”, also played a role. For shapes associated with good character, the *d* prime was greater when shapes had a "self" inside than with "other" inside ($mean_{diff}$ = 0.14, 95% credible intervals [-0.02, 0.31], BF = 12.07), but this effect did not occur when the target shape where associated with "neutral" ($mean_{diff}$ = 0.04, 95% HDI [-.11, .18]) or "bad" person ($mean_{diff}$ = -.05, 95% HDI[-.18, .09]). 
-
-The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55 ms, 95% HDI [-75, -35]), but this effect did not occur when the shapes were associated neutral ($mean_{diff}$ = 10, 95% HDI [1, 20]) or bad ($mean_{diff}$ = 5, 95% HDI [-16, 27]) person, See Figure \@ref(fig:plot-exp4-all).
-
+The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = `r df_exp4b_m1_rt_diff_hdi$Values[19]`, 95% HDI [`r df_exp4b_m1_rt_diff_hdi$Values[20]`, `r df_exp4b_m1_rt_diff_hdi$Values[21]`]), and this effect was larger than when the shapes were associated neutral ($mean_{diff}$ = `r df_exp4b_m1_rt_diff_hdi$Values[22]`, 95% HDI [`r df_exp4b_m1_rt_diff_hdi$Values[23]`, `r df_exp4b_m1_rt_diff_hdi$Values[24]`]) or bad ($mean_{diff}$ = `r df_exp4b_m1_rt_diff_hdi$Values[25]`, 95% HDI [`r df_exp4b_m1_rt_diff_hdi$Values[26]`, `r df_exp4b_m1_rt_diff_hdi$Values[27]`]) person, See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
 
