--- a/endnote.bib
+++ b/endnote.bib
@@ -2133,3 +2133,35 @@ Publisher: American Psychological Association},
 	note = {Publisher: SAGE Publications},
 	keywords = {emotion prioritisation, self-prioritisation, value-based reward prioritisation},
 }
+
+
+@article{makowski_indices_2019,
+	title = {Indices of {Effect} {Existence} and {Significance} in the {Bayesian} {Framework}},
+	volume = {10},
+	issn = {1664-1078},
+	url = {https://www.frontiersin.org/articles/10.3389/fpsyg.2019.02767/full},
+	doi = {10.3389/fpsyg.2019.02767},
+	language = {English},
+	urldate = {2020-12-24},
+	journal = {Frontiers in Psychology},
+	author = {Makowski, Dominique and Ben-Shachar, Mattan S. and Chen, S. H. Annabel and Lüdecke, Daniel},
+	year = {2019},
+	keywords = {Bayesian, Bayes Factors, NHST, p-value, significance},
+}
+
+@article{makowski_bayestestr_2019,
+	title = {{bayestestR}: {Describing} {Effects} and their {Uncertainty}, {Existence} and {Significance} within the {Bayesian} {Framework}},
+	volume = {4},
+	issn = {2475-9066},
+	shorttitle = {{bayestestR}},
+	url = {https://joss.theoj.org/papers/10.21105/joss.01541},
+	doi = {10.21105/joss.01541},
+	language = {en},
+	number = {40},
+	urldate = {2023-02-09},
+	journal = {Journal of Open Source Software},
+	author = {Makowski, Dominique and Ben-Shachar, Mattan S. and Lüdecke, Daniel},
+	month = aug,
+	year = {2019},
+	pages = {1541},
+}
